chore(): add masteredLevel to flashcard
